content overlapping issue fixed

--- a/src/blocks/container/style.scss
+++ b/src/blocks/container/style.scss
@@ -8,8 +8,8 @@
 	transition-timing-function: ease;
 
 	&.uagb-is-root-container {
-		margin-left: auto;
-		margin-right: auto;
+		margin-left: auto !important;
+		margin-right: auto !important;
 	}
 
 	&.alignfull.uagb-is-root-container .uagb-container-inner-blocks-wrap {
